@@ -288,6 +288,9 @@ Major changes from 1.9.0-jumbo-1 (May 2019) in this bleeding-edge version:
 
 - Added cardano2john.py: exports secret.key to john format. [ilap; 2022]
 
+- Added support for cracking blockchain wallet v4. [Solar; 2022]
+
+
 Major changes from 1.8.0-jumbo-1 (December 2014) to 1.9.0-jumbo-1 (May 2019):
 
 - Updated to 1.9.0 core, which brought the following relevant major changes:
